fixed a spacing issue in the tooltip

--- a/css/main.css
+++ b/css/main.css
@@ -138,7 +138,7 @@ h5 {
 .tooltip {
     position: relative;
     text-align: left;
-    max-width: 1150px;
+    max-width: 1100px;
     padding: 5px 10px;
     background: whitesmoke;
     border: 1px solid lightgrey;
